--- a/.github/workflows/latency.yml
+++ b/.github/workflows/latency.yml
@@ -1,46 +1,40 @@
-name: Monitor Latencia (Docker Version)
+name: Monitor de Latencia Global
 
 on:
   schedule:
-    # Ejecutar cada 6 horas (puedes cambiarlo)
+    # Ejecutar cada 6 horas
     - cron: "0 */6 * * *"
-  workflow_dispatch: # Botón para ejecutar manual desde la web
+  workflow_dispatch: # Permite ejecutarlo manualmente desde la pestaña Actions
 
-# Damos permiso al bot para escribir en el repositorio
 permissions:
   contents: write
 
 jobs:
-  run-docker-bot:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Descargar tu código del repositorio
       - name: Checkout del código
         uses: actions/checkout@v3
 
-      # 2. Construir la imagen Docker (igual que hiciste en tu PC)
-      - name: Construir Imagen Docker
-        run: docker build -t latency-bot .
+      - name: Configurar Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
 
-      # 3. Ejecutar el contenedor
-      # El truco aquí es "-v ${{ github.workspace }}:/app"
-      # Esto conecta la carpeta del servidor de GitHub con la carpeta /app del contenedor
-      # Así, cuando el script guarde la imagen, aparecerá fuera del contenedor.
-      - name: Ejecutar Monitor de Latencia
+      - name: Instalar dependencias
         run: |
-          docker run --rm -v ${{ github.workspace }}:/app latency-bot
+          pip install -r requirements.txt
 
-      # 4. Detectar cambios y hacer Commit
-      - name: Guardar cambios (Commit & Push)
+      - name: Ejecutar script de monitorización
+        # Usamos sudo porque ping a veces requiere permisos de root en Linux
+        run: sudo python monitor.py
+
+      - name: Guardar y subir cambios
         run: |
-          git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "actions@github.com"
-
-          # Verificamos si la imagen cambió
+          git config --global user.name "Latency Bot"
+          git config --global user.email "bot@github.com"
           git add latency_map.png
-
-          # Hacemos commit solo si hay cambios, si no, no falla
-          git commit -m "📊 Update: Latency Map [Automated]" || echo "No changes to commit"
-
+          # Solo hace commit si hubo cambios (si la imagen cambió)
+          git commit -m "Update: Latency Map $(date)" || exit 0
           git push
